--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^1.2.2",
+    "@astrojs/rss": "^1.0.3",
     "@astrojs/tailwind": "^2.1.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
